<resources>
    <string name="app_name">Basketball Sim</string>
    <string name="action_settings">Settings</string>

    <!-- Home Activity Strings -->
    <string name="new_game_button">New Game</string>
    <string name="load_game_button">Load Game</string>

    <!-- Team Activity Strings -->
    <string name="title_activity_team">TeamActivity</string>
    <string name="team_activity_title">Choose your team, Coach!</string>
    <string name="spinner_title">Choose your conference:</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Main Activity Strings -->
    <string name="roster_tab_title">Manage Roster</string>
    <string name="lineup_button_text">Adjust Lineup</string>
    <string name="stats_button_text">View Player Stats</string>
    <string name="schedule_tab_title">Schedule</string>
    <string name="sim_button_text">Sim Current Week</string>
    <string name="rest_of_league_title">Around the League</string>
    <string name="conf_text">Conference:</string>
    <string name="team_text">Teams:</string>
    <string name="adjust_lineup_title">Adjust Lineup</string>
    <string name="adjust_lineup_text">Each position must have 1 Starter (1st string) and 1 Role Player (2nd string) selected.\n\nAny changes to a position\'s depth chart must be saved before moving on to other positions.</string>
    <string name="save_lineup_button">Save Lineup</string>
    <string name="close_lineup_button">Close</string>

    <!-- String Array of Conference and Team Names (for use on Team Activity)
         TEAMS MUST BE ORDERED FIRST BY PRESTIGE AND THEN ALPHABETICALLY -->
    <string-array name="conference_array">
        <item>BIG 10</item>
        <item>BIG 12</item>
        <item>SEC</item>
        <item>ACC</item>
    </string-array>

    <string-array name="big10_array">
        <item>MICHIGAN ST - Prestige: 85</item>
        <item>MICHIGAN - Prestige: 80</item>
        <item>OHIO ST - Prestige: 80</item>
        <item>WISCONSIN - Prestige: 75</item>
        <item>IOWA - Prestige: 70</item>
        <item>PURDUE - Prestige: 70</item>
        <item>MINNESOTA - Prestige: 65</item>
        <item>ILLINOIS - Prestige: 60</item>
        <item>NEBRASKA - Prestige: 55</item>
        <item>RUTGERS - Prestige: 50</item>
    </string-array>

    <string-array name="big12_array">
        <item>KANSAS - Prestige: 90</item>
        <item>IOWA ST - Prestige: 80</item>
        <item>OKLAHOMA - Prestige: 80</item>
        <item>TEXAS - Prestige: 75</item>
        <item>BAYLOR - Prestige: 70</item>
        <item>OKLAHOMA ST - Prestige: 70</item>
        <item>KANSAS ST - Prestige: 65</item>
        <item>WEST VIRGINIA - Prestige: 65</item>
        <item>TEXAS TECH - Prestige: 60</item>
        <item>TEXAS CHRISTIAN - Prestige: 50</item>
    </string-array>

    <string-array name="sec_array">
        <item>KENTUCKY - Prestige: 95</item>
        <item>FLORIDA - Prestige: 80</item>
        <item>LOUISIANA ST - Prestige: 70</item>
        <item>SOUTH CAROLINA - Prestige: 70</item>
        <item>TENNESSEE - Prestige: 70</item>
        <item>VANDERBILT - Prestige: 70</item>
        <item>ARKANSAS - Prestige: 65</item>
        <item>GEORGIA - Prestige: 65</item>
        <item>ALABAMA - Prestige: 55</item>
        <item>AUBURN - Prestige: 50</item>
    </string-array>

    <string-array name="acc_array">
        <item>DUKE - Prestige: 90</item>
        <item>NORTH CAROLINA - Prestige: 90</item>
        <item>LOUISVILLE - Prestige: 80</item>
        <item>MIAMI - Prestige: 75</item>
        <item>SYRACUSE - Prestige: 75</item>
        <item>VIRGINIA - Prestige: 70</item>
        <item>FLORIDA ST - Prestige: 65</item>
        <item>GEORGIA TECH - Prestige: 65</item>
        <item>NORTH CAROLINA ST - Prestige: 60</item>
        <item>BOSTON COLLEGE - Prestige: 50</item>
    </string-array>

</resources>
