<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_lineup_text"
        android:id="@+id/player_detail_text"
        android:layout_gravity="center_vertical" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/position_spinner"
        android:layout_gravity="center_vertical" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/lineup_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="0px"
            android:layout_height="50dp"
            android:id="@+id/save_lineup_button"
            android:layout_gravity="center"
            android:text="@string/save_lineup_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="0px"
            android:layout_height="50dp"
            android:id="@+id/close_lineup_button"
            android:text="@string/close_lineup_button"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>