<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <!-- Visible when Manage Roster tab is selected -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/button_panel"
        android:layout_weight="0.5">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineup_button_text"
            android:id="@+id/lineup_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_button_text"
            android:id="@+id/stats_button"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- Visible when Schedule tab is selected -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:gravity="center_horizontal"
        android:id="@+id/schedule_text"
        android:layout_weight="0.5"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <!-- Visible when Around the League tab is selected -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conf_text"
        android:id="@+id/conf_spinner_text" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_conf_spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_text"
        android:layout_gravity="center_horizontal"
        android:id="@+id/team_spinner_text"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_team_spinner"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/radio_group">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Roster"
            android:id="@+id/roster_button"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule"
            android:id="@+id/schedule_button"/>

    </RadioGroup>
    <!-- ////////////////////////////////////////// -->

    <!-- Visible on both the Manage Roster/Around the League tabs -->
    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/roster_view"
        android:layout_weight="5.5"/>

    <!-- Visible on the Schedule tab -->
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/schedule_view"
        android:layout_weight="6.5"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:id="@+id/sim_week_button"
        android:text="@string/sim_button_text"
        android:layout_weight="1"/>
    <!-- ////////////////////////////////////////// -->

</LinearLayout>